# verb

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  glossary.html  highlight.js  index.html  install  install.sh  justfile  print.html  pyproject.toml  searchindex.js  searchindex.json  toc.html  toc.js
.github/workflows/: build.yml  docs.yml  pipeline.yml  test.yml
.orbit/: config.toml  gverb.py  gvert.py  gvsim.py  mod.py  vsim.py  vverb.py
docs/: book.toml  system.dio
docs/assets/: system.dio
docs/pack/: README.txt
docs/src/: SUMMARY.md  index.md
docs/src/reference/: api-python.md  api-systemverilog.md  api-vhdl.md  environment.md
docs/src/starting/: installing.md  motivation.md
docs/src/topic/: coverage.md  events.md  overview.md  vectors.md
examples/: README.md
examples/add/: Orbit.toml  add.vhd  add_if.json  add_tb.py  add_tb.vhd  add_tb_if.json
examples/adder/: adder.vhd  adder_tb.py
examples/bcd/: Orbit.toml  bcd_enc.vhd  bcd_enc_tb.py  bcd_enc_tb.vhd
examples/sv/.orbit/: config.toml
examples/timer/: Orbit.toml  timer.vhd  timer_tb.py  timer_tb.vhd
reference/: api-python.html  api-systemverilog.html  api-vhdl.html  environment.html  reference.html
scripts/: README.md  agglomerate.py  docs-sv.py  evalver.py  package  version-ok.py
src/lib/: README.md
src/lib/python/: pyproject.toml
src/lib/python/src/: __init__.py  bit.py  cast.py  context.py  logic.py  model.py  primitives.py  signal.py  vectors.py
src/lib/python/src/coverage/: __init__.py  group.py  point.py  ranger.py
src/lib/python/tests/: bit.py  coverage.py  logic.py  signal.py
src/lib/python/verb/: __init__.py  cast.py  context.py  coverage.py  model.py  primitives.py  signal.py  vectors.py
src/lib/python/verb/coverage/: __init__.py  cross.py  group.py  net.py  point.py  ranger.py  status.py
src/lib/python/verb/coverage2/: net.py  point.py
src/lib/python/vertex/: __init__.py  analysis.py  cast.py  context.py  coverage.py  lib.py  main.py  model.py  primitives.py  signal.py  vectors.py
src/lib/python/vertex/tests/: signal.py
starting/: installing.html  motivation.html
starting.md/: starting.html
topic/: coverage.html  events.html  overview.html  topic.html  vectors.html
tutorials/: tutorials.html
user/: user.html
verb/: __init__.py  constant.py  log.py  model.py  signal.py  testbench.py
verb/coverage/: __init__.py  group.py  net.py  point.py  ranger.py
verb/orbit/: adverb.py  coco.py  config.py  config.toml  goku.py
(+56 files in other folders)
