[project]
name = "verb"
version = "0.1.0"
authors = [{ name="Chase Ruskin" }]
description = "A verification library for digital hardware"
requires-python = ">=3.9"
dependencies = [
    "cocotb~=2.0",
    "pytest>=8.3",
]

[project.urls]
Homepage = "https://github.com/chaseruskin/verb"
Documentation = "https://chaseruskin.github.io/verb/"

[tool.setuptools.package-dir]
verb = "verb"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"