[project]
name = "verb"
version = "0.1.0"
authors = [{ name="Chase Ruskin" }]
description = "Software drivers for simulating hardware"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/cdotrus/verb"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
